# a2a-pdf-contentsuite-workflow-example

./: .gitignore  README.md  asyncclient.py  main.py  pyproject.toml
.github/workflows/: deploy.yaml
apps/: mailer.py  pdf_to_markdown.py  podcast_creator.py  pptx_creator.py  request_handler.py  spotify_uploader.py  text_to_speech.py
common/: a2a.py  agent_details.py  ai.py  logconfig.py
core/: agent_apps.py  agent_list.py  config.py
hello_files/libs/bootstrap/: bootstrap-ea682c7f0332e177912d4dba9b495d68.min.css
models/: schemas.py
services/: task_handler.py  tts_converter.py
static/: agent_home.index.js  agent_home.style.css
templates/: agent_home.html  index.html
utils/: file_utils.py  minio.py  options.py
