[project]
name = "pdf-to-content-suite"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "markdown-it-py[plugins]>=3.0.0",
    "minio>=7.2.16",
    "pydantic-ai>=0.4.4",
    "pymupdf>=1.26.3",
    "python-dotenv>=1.1.1",
    "structlog>=25.4.0",
]
